<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_activity_bookmarks">BookmarksActivity</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="search_results">Search results (%1$s)</string>
    <string name="star">star</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="poster_image">Poster image</string>
    <string name="bookmark_button">Bookmark button</string>
    <string name="return_back">Return back</string>
    <string name="awards">Awards</string>
    <string name="actors">Actors</string>
    <string name="director">Director</string>
    <string name="runtime">Runtime</string>
    <string name="released">Released</string>
    <string name="you_have_not_a_bookmarks">You have not a bookmarks</string>


</resources>